chore: freeze at pkl not working
Signed-off-by: Sam Gammon <sam@elide.dev>